colang-cli/tests/samples/features/templates/good/null_expr_type_parameter.co
struct Foo<T> {
  ptr: &T;

  fun init(&self) {
    self.ptr = null;
  }
}

fun main() {
  var foo: Foo<int>;
  foo.init();
}
