colang-cli/tests/samples/features/templates/compilation_error/infinite_type_chain.co
struct Foo<T> {
  foo: Foo<Foo<T>>;
}

fun main() { }
